# crewai-project

content_creation_social_media/: LICENSE  README.md  pyproject.toml
content_creation_social_media/db/: chroma.sqlite3
content_creation_social_media/src/content_creation_social_media/: crew.py  main.py
content_creation_social_media/src/content_creation_social_media/config/: tasks.yaml
landing_page_by_cursor/: index.html
social_media_auto_comment/: README.md  image_analysis.md  image_analysis_副本.md  log_test  pyproject.toml  report.md
social_media_auto_comment/src/social_media_auto_comment/: crew.py  main.py
social_media_auto_comment/src/social_media_auto_comment/config/: agents.yaml  tasks.yaml
social_media_auto_comment/src/social_media_auto_comment/tools/: conversations_format.py  faiss_retrival_tool.py  image_cdn_tool.py
social_medie_auto_comment_v2/src/knowledge/: comment_conversations_corpus.json  comment_conversations_corpus.jsonl  product_info.txt
social_medie_auto_comment_v2/src/social_media_auto_comment/: auto_reply_report.json  image_analysis.md  main.py
social_medie_auto_comment_v2/src/social_media_auto_comment/browser_data/: xhs_cookies.json  xhs_cookies_xhs.json
social_medie_auto_comment_v2/src/social_media_auto_comment/cache/: cache_factory.py  local_cache.py
social_medie_auto_comment_v2/src/social_media_auto_comment/config/: base_config.py
video_analysis_copy_write/: README.md  error_page.html  pyproject.toml  requirements.txt  resultJsonFile.json  setup.py  video_analysis_result.json  video_copy_writer_output.md
video_analysis_copy_write/src/video_analysis_copy_write/: __init__.py  main.py
video_analysis_copy_write/src/video_analysis_copy_write/crews/video_analysis_crew/: __init__.py  video_analysis_crew.py
video_analysis_copy_write/src/video_analysis_copy_write/crews/video_analysis_crew/config/: agents.yaml  prompts.json  tasks.yaml
video_analysis_copy_write/src/video_analysis_copy_write/crews/video_copy_writer_crew/: __init__.py  video_copy_writer_crew.py
video_analysis_copy_write/src/video_analysis_copy_write/crews/video_copy_writer_crew/config/: agents.yaml  tasks.yaml
video_analysis_copy_write/src/video_analysis_copy_write/utils/: video_processor.py
(+873 files in other folders)
